[package]
name = "csv_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fixed_width = "0.5"
fixed_width_derive = "0.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
